# case-pilot-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: README.md
app/: main.py
app/api/: deps.py  router.py  routes_agents.py  routes_cases.py  routes_diagnostics.py  routes_executions.py  routes_files.py  routes_knowledge.py  routes_obd.py
app/core/: config.py
app/db/: __init__.py  base.py  session.py
app/services/: factory.py  hid_bridge.py  llm.py  obd_source.py  omniparser_client.py  postgres_store.py  store.py  vector_search.py
app/workers/: __init__.py
tests/: test_health.py  test_integration_contracts.py  test_workflow.py
