[project]
name = "case-pilot-backend"
version = "0.1.0"
description = "CasePilot backend MVP with mock adapters for staged integration"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "aiortc>=1.9.0",
  "Pillow>=10.4.0",
  "psycopg[binary,pool]>=3.2.0",
  "qdrant-client>=1.12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
